--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
   },
   "homepage": "https://github.com/juhuyoon/lfirm-simple#readme",
   "dependencies": {
+    "aws-sdk": "^2.488.0",
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
     "materialize-css": "^1.0.0-rc.2",
-    "mysql": "^2.17.1"
+    "mysql": "^2.17.1",
+    "nodemailer": "^6.2.1",
+    "xoauth2": "^1.2.0"
   }
 }
