--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/juhuyoon/lfirm-simple#readme",
   "dependencies": {
     "aws-sdk": "^2.488.0",
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
@@ -28,6 +29,6 @@
     "materialize-css": "^1.0.0-rc.2",
     "mysql": "^2.17.1",
     "nodemailer": "^6.2.1",
-    "xoauth2": "^1.2.0"
+    "path": "^0.12.7"
   }
 }
